[Binding] setDOMException should be inlined and fall to the slow path if exception occurs https://bugs.webkit.org/show_bug.cgi?id=162503

Reviewed by Saam Barati.

Binding code emits setDOMException in critical paths. However, it is not inlined.
Since exception less frequently occurs, we should have inlined setDOMException that
early returns if it does not need to raise an exception. And it should call the exception
raising code as slow path case. This tiny optimization can offer improvement if
the DOM function is tiny and DOM binding occupies large part of it. Combined with r206338,
it offers 5% improvement in Dromaeo dom-attr getAttribute / setAttribute tests.

* bindings/js/JSDOMBinding.cpp:
(WebCore::throwDOMException): Extract the actual exception raising code.
(WebCore::setDOMExceptionSlow): Call throwDOMException and keep it not inlined.
(WebCore::setDOMException):
* bindings/js/JSDOMBinding.h:
(WebCore::setDOMException): Use ThrowScope& to check `scope.exception()`.
And it has a path for normal case that allows early returning.
* bindings/scripts/CodeGeneratorJS.pm:
(GenerateImplementation):
(GenerateImplementationFunctionCall):
(GenerateConstructorDefinition):


Canonical link: https://commits.webkit.org/180478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206354 268f45cc-cd09-0410-ab3c-d52691b4dbfc