Source/WebCore/bindings/js/JSDOMBinding.h
@@ -24,6 +24,7 @@
 #pragma once
 
 #include "DOMWrapperWorld.h"
+#include "ExceptionCode.h"
 #include "JSDOMGlobalObject.h"
 #include "JSDOMWrapper.h"
 #include "ScriptWrappable.h"
@@ -68,8 +69,6 @@ class DOMWindow;
 class Frame;
 class URL;
 class Node;
-
-struct ExceptionCodeWithMessage;
 
 template<typename> class ExceptionOr;
 
@@ -189,6 +188,23 @@ JSC::JSValue createDOMException(JSC::ExecState*, ExceptionCode, const String&);
 // Convert a DOM implementation exception code into a JavaScript exception in the execution state.
 WEBCORE_EXPORT void setDOMException(JSC::ExecState*, ExceptionCode);
 void setDOMException(JSC::ExecState*, const ExceptionCodeWithMessage&);
+
+WEBCORE_EXPORT void setDOMExceptionSlow(JSC::ExecState*, JSC::ThrowScope&, ExceptionCode);
+void setDOMExceptionSlow(JSC::ExecState*, JSC::ThrowScope&, const ExceptionCodeWithMessage&);
+
+ALWAYS_INLINE void setDOMException(JSC::ExecState* exec, JSC::ThrowScope& throwScope, const ExceptionCodeWithMessage& message)
+{
+    if (LIKELY(!message.code || throwScope.exception()))
+        return;
+    setDOMExceptionSlow(exec, throwScope, message);
+}
+
+ALWAYS_INLINE void setDOMException(JSC::ExecState* exec, JSC::ThrowScope& throwScope, ExceptionCode ec)
+{
+    if (LIKELY(!ec || throwScope.exception()))
+        return;
+    setDOMExceptionSlow(exec, throwScope, ec);
+}
 
 template<typename T> inline JSC::JSValue toJS(JSC::ExecState*, JSDOMGlobalObject*, ExceptionOr<T>&&);
 template<typename T> inline JSC::JSValue toJSNewlyCreated(JSC::ExecState*, JSDOMGlobalObject*, ExceptionOr<T>&&);
